--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,6 +35,13 @@
     </style>
 
 
+    <!--&lt;!&ndash; ToolBar &ndash;&gt;-->
+    <!--<style name="Erik.Toolbar.Transparent" parent="ThemeOverlay.AppCompat.Dark.ActionBar">-->
+    <!--<item name="android:windowActionBarOverlay">true</item>-->
+    <!--&lt;!&ndash; Support Library compability &ndash;&gt;-->
+    <!--<item name="windowActionBarOverlay">true</item>-->
+    <!--</style>-->
+
     <!-- ToolBar -->
     <style name="Erik.Toolbar.Transparent" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:windowActionBarOverlay">true</item>
@@ -57,6 +64,16 @@
         <item name="android:background">@drawable/button_login</item>
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+
+    <style name="Widget.Button.Evidence" parent="android:Widget">
+        <item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:background">@drawable/button_evidence</item>
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+        <item name="android:textColor">@color/button_cristal</item>
         <item name="android:textStyle">bold</item>
 
     </style>
