add fluje evidence done.

--- a/app/src/main/res/layout/activity_informacion.xml
+++ b/app/src/main/res/layout/activity_informacion.xml
@@ -8,10 +8,12 @@
     tools:context="la.opi.verificacionciudadana.activities.InformacionActivity">
 
 
+
     <FrameLayout
         android:id="@+id/container_informacion"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         tools:context="la.opi.verificacionciudadana.activities.InformacionActivity"
         tools:ignore="MergeRootFrame" />
 
