--- a/app/src/main/res/drawable/button_map.xml
+++ b/app/src/main/res/drawable/button_map.xml
@@ -2,7 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <layer-list>
-
             <item>
                 <shape android:shape="rectangle">
                     <solid android:color="@color/button_shadow_map" />
@@ -11,7 +10,7 @@
             </item>
             <item android:bottom="1.5dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/button_shadow_map" />
+                    <solid android:color="@color/button_shadow_map_press" />
                     <corners android:radius="2dp" />
                     <padding android:left="-10dp" android:right="-10dp" />
                 </shape>
@@ -31,7 +30,7 @@
             </item>
             <item android:bottom="1.5dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/orange" />
+                    <solid android:color="@color/button_shadow_map" />
                     <corners android:radius="2dp" />
                     <padding android:left="-10dp" android:right="-10dp" />
                 </shape>
