--- a/app/src/main/res/layout/fragment_event_calification.xml
+++ b/app/src/main/res/layout/fragment_event_calification.xml
@@ -9,18 +9,9 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="220dp"
-        android:background="@color/orange"
+        android:background="@color/primary"
         android:gravity="center" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_margin="10dp"
-        android:text="2 de 4"
-        android:textSize="15sp"
-        android:textColor="@color/white"
-        android:gravity="center" />
 
 
     <android.support.v7.widget.CardView
@@ -49,7 +40,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:text="@string/scale_txt"
-                android:textColor="@color/accent"
+                android:textColor="@color/secondary_text"
                 android:textSize="20sp" />
 
             <TextView
@@ -59,10 +50,10 @@
                 android:layout_below="@+id/textView3"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/calification_event"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/accent"
+                android:textColor="@color/secondary_text"
                 android:textSize="20sp" />
 
             <RatingBar
@@ -96,8 +87,8 @@
         android:layout_marginTop="49dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
-        fab:fab_colorNormal="@color/cristal"
-        fab:fab_colorPressed="@color/cristal"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent"
         fab:fab_icon="@drawable/ic_go"
         fab:fab_plusIconColor="@color/white"
    />
