--- a/app/src/main/res/layout/fragment_event_observation.xml
+++ b/app/src/main/res/layout/fragment_event_observation.xml
@@ -14,18 +14,10 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="220dp"
-            android:background="@color/orange"
+            android:background="@color/primary"
             android:gravity="center" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:text="3 de 4"
-            android:textColor="@color/white"
-            android:textSize="15sp" />
+
 
 
         <android.support.v7.widget.CardView
@@ -53,9 +45,9 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
-                    android:text="Anota cualquier observación importante"
+                    android:text="@string/evindece_three_instruccions"
                     android:textColor="@color/font_color_app"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/edit_txt_observations"
@@ -64,9 +56,9 @@
                     android:layout_alignLeft="@+id/textView3"
                     android:layout_alignStart="@+id/textView3"
                     android:layout_below="@+id/textView3"
+                    android:text="@string/lorem"
                     android:layout_marginTop="50dp"
-                    android:hint="agregar observación"
-                    android:textColor="@color/orange"
+                    android:hint="@string/evindece_three_instruccions_a"
                     android:textSize="16sp" />
 
 
@@ -78,8 +70,9 @@
                     android:layout_alignRight="@+id/textView3"
                     android:layout_below="@+id/edit_txt_observations"
                     android:layout_marginTop="60dp"
-                    android:text="CONTINUAR"
-                    android:textColor="@color/button_cristal" />
+                    android:textSize="14sp"
+                    android:text="@string/evindece_three_instruccions_btn"
+                    android:textColor="@color/accent" />
 
 
             </RelativeLayout>
@@ -93,6 +86,8 @@
             android:layout_gravity="center_horizontal|top"
             android:layout_marginTop="30dp"
             android:src="@drawable/ic_lapiz" />
+
+
 
     </FrameLayout>
 </ScrollView>
