--- a/app/src/main/res/layout/item_list_ocurrences.xml
+++ b/app/src/main/res/layout/item_list_ocurrences.xml
@@ -14,7 +14,8 @@
         android:gravity="left"
         android:maxLines="2"
         android:text="Atención a consumidores problematicos"
-        android:textColor="@color/primary"
+        android:textColor="@color/secondary_text"
+        android:textStyle="bold"
         android:textSize="16sp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
@@ -31,7 +32,7 @@
         android:gravity="left"
         android:maxLines="1"
         android:text="Roma Norte , Guadalajara 21  "
-        android:textColor="@color/primary_text"
+        android:textColor="@color/secondary_text"
         android:textSize="14sp" />
 
 
