--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="primary">#00BB9B</color>
-    <color name="primary_dark">#008D77</color>
-    <color name="accent">#00BB9B</color>
+    <!--<color name="primary">#00BB9B</color>-->
+    <!--<color name="primary_dark">#008D77</color>-->
+    <!--<color name="accent">#00BB9B</color>-->
+    <color name="primary">#536DFE</color>
+    <color name="primary_dark">#3D5AFE</color>
+    <color name="accent">#EC407A</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="divider_color">#B6B6B6</color>
@@ -20,7 +23,7 @@
     <color name="font_color_app">#5f5f5f</color>
     <color name="font_color_app_enabled">#105f5f5f</color>
     <color name="color_app">#5f5f5f</color>
-    <color name="black_grid">#60000000</color>
+    <color name="black_grid">#70000000</color>
 
 
     <color name="white">#ffffff</color>
@@ -39,7 +42,8 @@
     <color name="recycle_events_background">#e3e3e3</color>
     <color name="button_pressed">#9500CCAE</color>
     <color name="button_shadow">#008974</color>
-    <color name="button_shadow_map">#F57C00</color>
+    <color name="button_shadow_map">#15ffffff</color>
+    <color name="button_shadow_map_press">#30ffffff</color>
     <color name="btn_other_enabled_map">#FF8A80</color>
     <color name="btn_other_map_preesed">#90FF5252</color>
     <color name="orange">#FF9800</color>
