--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="android:textColorSecondary">@color/secondary_text</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="colorControlNormal">@color/white</item>
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlActivated">@color/primary</item>
         <item name="colorControlHighlight">@color/color_control_app</item>
 
 
@@ -120,6 +120,27 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+
+    <style name="Widget.EditText.Comment" parent="android:Widget">
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textColorHint">@color/secondary_text</item>
+        <item name="colorControlNormal">@color/primary</item>
+        <item name="colorControlActivated">@color/orange</item>
+        <item name="colorControlHighlight">@color/color_control_app</item>
+
+    </style>
+
+    <style name="ActionBarThemeOverlay" parent="">
+        <item name="android:textColorPrimary">@color/primary_dark</item>
+        <item name="colorControlNormal">@color/secondary_text</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textColorHint">@color/secondary_text</item>
+    </style>
+
+    <style name="Widget.MyTheme.EditTxt" parent="android:Widget">
+        <item name="android:theme">@style/ActionBarThemeOverlay</item>
+    </style>
 
 
 </resources>
