--- a/app/src/main/res/drawable/button_standar_custom.xml
+++ b/app/src/main/res/drawable/button_standar_custom.xml
@@ -4,13 +4,13 @@
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/button_shadow_map" />
+                    <solid android:color="@color/button_shadow_custom" />
                     <corners android:radius="2dp" />
                 </shape>
             </item>
             <item android:bottom="1.5dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/button_shadow_map_press" />
+                    <solid android:color="@color/button_shadow_custom" />
                     <corners android:radius="2dp" />
                     <padding android:left="-10dp" android:right="-10dp" />
                 </shape>
@@ -24,13 +24,13 @@
 
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/button_shadow_map" />
+                    <solid android:color="@color/button_shadow_custom" />
                     <corners android:radius="2dp" />
                 </shape>
             </item>
             <item android:bottom="1.5dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/button_shadow_map" />
+                    <solid android:color="@color/button_custom" />
                     <corners android:radius="2dp" />
                     <padding android:left="-10dp" android:right="-10dp" />
                 </shape>
@@ -44,13 +44,13 @@
 
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/button_shadow_map" />
+                    <solid android:color="@color/button_shadow_custom" />
                     <corners android:radius="2dp" />
                 </shape>
             </item>
             <item android:bottom="1.5dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/button_shadow_map_press" />
+                    <solid android:color="@color/button_un_pressed" />
                     <corners android:radius="2dp" />
                     <padding android:left="-10dp" android:right="-10dp" />
                 </shape>
