--- a/app/src/main/res/layout/fragment_session.xml
+++ b/app/src/main/res/layout/fragment_session.xml
@@ -60,7 +60,7 @@
 
         <Button
             android:id="@+id/btn_login"
-            style="@style/Widget.Button.Standar"
+            style="@style/Widget.Button.Standar.Custom"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginBottom="20dp"
