--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,6 +87,15 @@
 
     </style>
 
+    <style name="Widget.Button.Standar.Custom" parent="android:Widget">
+    <item name="android:gravity">center_vertical|center_horizontal</item>
+    <item name="android:background">@drawable/button_standar_custom</item>
+    <item name="android:textAppearance">?android:textAppearanceSmall</item>
+    <item name="android:textColor">@color/white</item>
+    <item name="android:textStyle">bold</item>
+    </style>
+
+
     <style name="Widget.Button.Standar.Other" parent="android:Widget">
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:background">@drawable/button_standar_other</item>
