--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/angell"
+    android:background="@drawable/home"
     tools:context="la.opi.verificacionciudadana.activities.LoginActivity">
 
     <android.support.v7.widget.Toolbar
