--- a/app/src/main/res/layout/fragment_municipal.xml
+++ b/app/src/main/res/layout/fragment_municipal.xml
@@ -68,7 +68,7 @@
 
     <Button
         android:id="@+id/save"
-        style="@style/Widget.Button.Standar"
+        style="@style/Widget.Button.Standar.Custom"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
