--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="android:navigationBarColor">@color/primary</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
@@ -90,7 +91,7 @@
     <style name="Widget.Button.Standar.Custom" parent="android:Widget">
     <item name="android:gravity">center_vertical|center_horizontal</item>
     <item name="android:background">@drawable/button_standar_custom</item>
-    <item name="android:textAppearance">?android:textAppearanceSmall</item>
+    <item name="android:textAppearance">?android:textAppearanceMedium</item>
     <item name="android:textColor">@color/white</item>
     <item name="android:textStyle">bold</item>
     </style>
