fixed database bugs and evidence fluje add delete evidence from data base and sd card

--- a/app/src/main/res/layout/fragment_demo_activity.xml
+++ b/app/src/main/res/layout/fragment_demo_activity.xml
@@ -4,7 +4,7 @@
     android:id="@+id/background_pager_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mex"
+    android:background="@drawable/tutorial_one"
     android:orientation="vertical"
     tools:context="la.opi.verificacionciudadana.activities.TutorialActivity$DemoFragment">
 
