--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,10 +16,11 @@
         android:id="@+id/text_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="97dp"
         android:background="@color/black_grid"
         android:padding="@dimen/spacing_large"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:layout_gravity="right|bottom" />
 
 
 </FrameLayout>
