--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -7,7 +7,9 @@
     <item
         android:id="@+id/map"
         android:orderInCategory="100"
-        android:title="@string/tutorial_menu_two"
+        android:title="@string/map_menu"
         android:icon="@drawable/ic_maps_toolbar"
         app:showAsAction="always" />
+
+
 </menu>
