--- a/app/src/main/res/layout/fragment_ocurrences.xml
+++ b/app/src/main/res/layout/fragment_ocurrences.xml
@@ -1,40 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipe_refresh_layout"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@color/recycle_events_background">
 
-    <FrameLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/recycle_events_background">
+        android:foreground="?android:attr/selectableItemBackground"
+        android:scrollbars="vertical" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/my_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:scrollbars="vertical" />
-
-        <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
-            <!--android:id="@+id/btn_maps"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom|right"-->
-            <!--android:layout_marginBottom="7dp"-->
-            <!--android:layout_marginRight="7dp"-->
-            <!--fab:fab_colorNormal="@color/float_button"-->
-            <!--fab:fab_colorPressed="@color/float_button"-->
-            <!--fab:fab_icon="@drawable/ic_map_even"-->
-            <!--fab:fab_plusIconColor="@color/white" />-->
+    <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
+    <!--android:id="@+id/btn_maps"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="bottom|right"-->
+    <!--android:layout_marginBottom="7dp"-->
+    <!--android:layout_marginRight="7dp"-->
+    <!--fab:fab_colorNormal="@color/float_button"-->
+    <!--fab:fab_colorPressed="@color/float_button"-->
+    <!--fab:fab_icon="@drawable/ic_map_even"-->
+    <!--fab:fab_plusIconColor="@color/white" />-->
 
 
-    </FrameLayout>
+</FrameLayout>
 
-
-</android.support.v4.widget.SwipeRefreshLayout>
 
 
 
