--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -71,7 +71,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
-                android:background="@color/disable_black_two"/>
+                android:background="@color/disable_black_two" />
 
             <EditText
                 android:id="@+id/edit_txt_password_confirm"
@@ -107,12 +107,16 @@
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/secondary_text" />
 
+
                 <Spinner
                     android:id="@+id/spinner_state"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
-                    android:gravity="center" />
+                    android:gravity="center"
+
+                    />
+
             </LinearLayout>
 
 
@@ -132,11 +136,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="1dp"
+                    android:background="@color/white"
                     android:gravity="center"
                     android:padding="10dp"
                     android:text="Municipio"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:background="@color/white" />
+                    android:textAppearance="?android:textAppearanceMedium" />
 
                 <Spinner
                     android:id="@+id/spinner_municipal"
