--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,6 +96,14 @@
     <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Widget.Button.Standar.Custom.Two" parent="android:Widget">
+        <item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:background">@drawable/button_standar_custom</item>
+        <item name="android:textAppearance">?android:textAppearanceSmall</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
     <style name="Widget.Button.Standar.Other" parent="android:Widget">
         <item name="android:gravity">center_vertical|center_horizontal</item>
@@ -142,15 +150,13 @@
     </style>
 
     <style name="ActionBarThemeOverlay" parent="">
-        <item name="android:textColorPrimary">@color/primary_dark</item>
+        <item name="android:textColorPrimary">@color/secondary_text</item>
         <item name="colorControlNormal">@color/secondary_text</item>
-        <item name="android:textColor">@color/primary_text</item>
-        <item name="android:textColorHint">@color/secondary_text</item>
+        <item name="colorControlHighlight">@color/secondary_text</item>
     </style>
 
-    <style name="Widget.MyTheme.EditTxt" parent="android:Widget">
+    <style name="Widget.MyTheme.HeaderBar.Spinner" parent="Theme.AppCompat.Light">
         <item name="android:theme">@style/ActionBarThemeOverlay</item>
     </style>
-
 
 </resources>
